# bioimage_phenotyping

./: .gitignore  Dockerfile  Makefile  README.md  cellesce.py  environment.yaml  notebook.py  pyproject.toml  spline_only.py  splines.ipynb  splines.py
bioimage_phenotyping/: __init__.py  cellprofiler.py  dataset.py  pipeline.py  shapes.py  utils.py
bioimage_phenotyping/dataset/: __init__.py  cellprofiler.py  cleaning.py  utils.py
bioimage_phenotyping/features/: __init__.py  importance.py  pca.py  plotting.py  selection.py  transforms.py
bioimage_phenotyping/metrics/: __init__.py  regression.py  similarity.py
bioimage_phenotyping/models/: __init__.py
bioimage_phenotyping/segmentation/: __init__.py  base.py
bioimage_phenotyping/segmentation/algorithms/: __init__.py  active_contours.py  watershed.py
bioimage_phenotyping/transforms/: __init__.py
scripts/: cellesce.py  good_splines.py  plast_cell.py  splines.py
snakemake/zarr/: Snakefile  environment.yml  pyproject.toml
splinedist/: infer.py
tests/: test_dataset.py
