[tool.poetry]
name = "cellesce"
version = "0.1.0"
description = ""
authors = ["ctr26 <ctr26@ebi.ac.uk>"]

[tool.poetry.dependencies]
python = "^3.8.8"
seaborn = "0.11.2"
pandas = "1.4.4"
matplotlib = "^3.5.1"
numpy = "^1.22.3"
scikit-learn = "^1.0.2"
shap = "^0.41.0"
dask = "^2023.1.1"
distributed = "^2023.1.1"
jupytext = "^1.14.4"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
black = {version = "^23.1.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
  "."
]