[tool.poetry]
name = "cellesce"
version = "0.1.0"
description = ""
authors = ["ctr26 <ctr26@ebi.ac.uk>"]
packages = [
    { include = "bioimage_phenotyping" }
]
[tool.poetry.dependencies]
python = ">=3.8.8,<3.11"
# seaborn = "0.11.2"
# pandas = "1.4.4"
# numpy = "^1.22.3"
# scikit-learn = "^1.0.2"
# shap = "^0.41.0"
# dask = "^2023.1.1"
# distributed = "^2023.1.1"
scikit-image = "^0.20.0"
jupytext = "^1.14.4"
jupyter-client = "^8.0.2"
centrosome = "^1.2.1"

llvmlite = "0.39.0"
# numba = "0.56.0"
ipykernel = "^6.22.0"
ipython = "^8.11.0"
matplotlib = "3.1.3"
numba = "^0.56.4"
seaborn = "^0.12.2"
pandas = "^1.5.3"
numpy = ">=1.18,<1.24"
scikit-learn = "^1.2.2"
shap = "^0.41.0"
dask = "^2023.3.1"
scipy = ">=1.8,<1.9.2"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
black = {version = "^23.1.0", allow-prereleases = true}
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
  "."
]
